# cryptotrade-exchange

./: .gitignore  Cargo.toml  DEPLOYMENT.md  README.md  blog.md  deploy-test.sh  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci-cd.yml
backend/: Dockerfile
backend/api/: Cargo.toml
backend/api/src/: auth.rs  handlers.rs  lib.rs  main.rs  middleware.rs  openapi.rs  websocket.rs
backend/core/: Cargo.toml
backend/core/src/: auth.rs  config.rs  database.rs  error.rs  lib.rs  models.rs  utils.rs
backend/core/src/services/: market_data_service.rs  mod.rs  order_service.rs  portfolio_service.rs  trading_service.rs  user_service.rs
backend/migrations/: 001_create_users.sql  002_create_accounts_trading_pairs.sql  003_create_orders_trades.sql  004_create_transactions_portfolio.sql
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
frontend/src/: App.tsx  index.css
frontend/src/components/Auth/: ProtectedRoute.tsx
frontend/src/components/Layout/: AuthLayout.tsx  Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/pages/Auth/: Login.tsx  Register.tsx
frontend/src/pages/Dashboard/: Dashboard.tsx
frontend/src/pages/Orders/: Orders.tsx
frontend/src/pages/Portfolio/: Portfolio.tsx
frontend/src/pages/Settings/: Settings.tsx
frontend/src/pages/Trading/: Trading.tsx
frontend/src/pages/Transactions/: Transactions.tsx
frontend/src/services/: api.ts
frontend/src/stores/: index.ts
frontend/src/types/: index.ts
k8s/helm/cryptotrade-exchange/: Chart.yaml  values.yaml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/otel/: otel-collector-config.yaml
monitoring/prometheus/: prometheus.yml
