[package]
name = "cryptotrade-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cryptotrade-api"
path = "src/main.rs"

[dependencies]
# Local dependencies
cryptotrade-core = { path = "../core" }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Logging and tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Time handling
chrono = { workspace = true }

# UUID
uuid = { workspace = true }


utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }



